--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ pageTitle }}{% if page.url != '/' %} | {{ siteName }}{% endif %}</title>
-  <link rel="icon" href="/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/static/6181favicon.ico" sizes="32x32">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="description" content="{{ pageDescription }}">
